--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,9 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     font-family: "Roboto", sans-serif;
     font-style: normal;
-    font-weight: 100;
 }
 .header{
     display: flex;
@@ -20,12 +19,12 @@
     background: rgb(3, 1, 1, 0.7);
     display: flex;
     border: 1px solid  white;
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 5px;
-    color: white;
+    color: silver;
     text-decoration: none;
     margin-top: 5px;
-    margin-left: 60%;
+    margin-left: 50%;
     margin-right: 5px;
     font-size: 12px;
     justify-content: center;
@@ -38,18 +37,17 @@
     align-items: center;
 }
 .header-inferior_imagen img {
-    width: 200px;
-    height: 120px;
+    width: 150px;
+    height: 90px;
 }
 .header-inferior_descripcion {
-    padding: 20px;
-    color: white;
+    color: silver;
     text-align: center;
+    margin-top: 3px;
 }
 .header-inferior_descripcion h2{
-    margin-top: 10px;
-    padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    font-weight: 400;
 }
 .header-inferior_eleccionPlanes {
     background: #040714;
@@ -57,28 +55,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5px;
 }
 .header-inferior_eleccionPlanes_Estandar {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 5px;
-    
+    padding: 5px;    
 }
 .header-inferior_eleccionPlanes_Estandar  a {
     background: #02d6e8;
     text-decoration: none;
     margin-top: 10px;
     border-radius: 5px;
-    padding: 18px 35px;
+    padding: 18px 20px;
     color: #040714;
+    text-align: center;
 }
 
 .header-inferior_eleccionPlanes_Estandar h4 {
     padding: 10px;
-    color: white;
+    color: silver;
     text-align: center;
     margin-top: 5px;
 }
@@ -86,7 +82,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding: 5px;
 }
 .header-inferior_eleccionPlanes_Premium a {
@@ -94,23 +89,34 @@
     text-decoration: none;
     margin-top: 10px;
     border-radius: 5px;
-    padding: 18px 35px;
+    padding: 18px 20px;
     color: #040714;
+    text-align: center;
 }
 .header-inferior_eleccionPlanes_Premium h4 {
     padding: 10px;
-    color: white;
+    color: silver;
     text-align: center;
     margin-top: 5px;
 }
 .header-inferior_eleccionPlanes_detalles {
     padding: 10px;
     margin: 20px 5px 40px 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .header-inferior_eleccionPlanes_detalles a{
-    color: white;
+    color: silver;
     font-size: 15px;
     font-weight: bold;
+}
+.header-inferior_eleccionPlanes_detalles img{
+    width: 50px;
+    height: 50px;
+    margin-top: 50px;
+    color: white;
 }
 
 
@@ -120,23 +126,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     background: #040714;
-    padding: 30px;
-    text-align: center;
+    padding: 10px;
+    text-align:center;
 }
 .main-Seccion_uno-descripcion {
-    color: white;
-    margin-top: 30px;
+    color: silver;
+    margin-top: 20px;
     margin-bottom: 70px;
 }
 .main-Seccion_uno-descripcion h4 {
     font-weight: bold;
     margin-bottom: 15px;
-    font-size: 18px;
+    font-size: 30px;
 }
 .main-Seccion_uno-descripcion h5 {
     font-size: 13px;
+    font-weight: 500;
 }
 .main-Seccion_uno_imagen img{
     object-fit: fill;
@@ -148,7 +154,7 @@
 .main-Seccion_dos {
     background: #040714;
     padding: 15px;
-    color: white;
+    color: silver;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -203,14 +209,11 @@
 }
 .main-Seccion_dos_eleccion_cabeceraOpciones a {
     text-decoration: none;
-    color: white;
+    color: silver;
     font-size: 15px;
     text-align: center;
     margin-bottom: 5px;
 }
-
-
-
 .main-Seccion_dos_eleccion_Estrenos {
     margin-top: 20px;
     display: flex;
@@ -253,17 +256,18 @@
     align-items: center;
 }
 .main-Seccion_cuatro_superior_descripcion {
-    color: white;
+    color: silver;
     margin-top: 30px;
     margin-bottom: 70px;
 }
 .main-Seccion_cuatro_superior_descripcion h4 {
     font-weight: bold;
     margin-bottom: 15px;
-    font-size: 25px;
+    font-size: 30px;
 }
 .main-Seccion_cuatro_superior_descripcion h5 {
     font-size: 18px;
+    font-weight: 300;
 }
 .main-Seccion_cuatro_superior_imagen img{
     object-fit: fill;
@@ -280,7 +284,7 @@
 }
 .main-Seccion_cuatro_inferior_titulo {
     text-align: center;
-    color: white;
+    color: silver;
     font-weight: 700;
     margin-bottom: 15px;
 }
@@ -290,38 +294,49 @@
     justify-content: center;
     align-items: center;
 }
-.main-Seccion_cuatro_inferior_preguntas a{
-    text-decoration: none;
-    color: white;
-    background-color: #00000086;
+.main-Seccion_cuatro_inferior_preguntas-1, .main-Seccion_cuatro_inferior_preguntas-2, .main-Seccion_cuatro_inferior_preguntas-3 {
+    background: #0e0b14;
+    width: 90%;
     padding: 20px;
-    margin-bottom: 10px;
-    font-weight: 500;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    color: silver;
+    font-weight: 900;
+}
+.main-Seccion_cuatro_inferior_preguntas-1, .main-Seccion_cuatro_inferior_preguntas-2, .main-Seccion_cuatro_inferior_preguntas-3 img{
+   margin-left: 5px;
+}
+.main-Seccion_cuatro_inferior_preguntas-1, .main-Seccion_cuatro_inferior_preguntas-2, .main-Seccion_cuatro_inferior_preguntas-3 h4{
+    text-align: start;
 }
 
 /*FOOTER*/
 .footer { 
-    background:#000518;
-    color: white;
+    background: #0e0b14;
+    color: silver;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
 }
 .footer-informacion {
     display: flex;
     flex-direction: column;
+    padding: 30px;
 }
 .footer-informacion_politicas_acuerdos {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 30px;
 }
 .footer-informacion_politicas_acuerdos h3{
     font-size: 15px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 5px;
+    margin-bottom: 30px;
 }
 .footer-informacion_politicas_acuerdos h4 {
     font-size: 13px;
@@ -336,23 +351,71 @@
     margin-top: 10px;
     border-bottom: 2px solid grey ;
 }
+
+.footer-informacion_ayuda-items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+
+}
+.footer-informacion_ayuda-items h3{
+    text-align: center;
+}
+
+.footer-informacion_ayuda-items img {
+    text-align: end;
+}
 .footer-informacion_ayuda h3 {
     font-size: 15px;
     margin-bottom: 40px;
     font-weight: 400;
     text-align: left;
 }
+.footer-empresas {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .footer-empresas_plataformas {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    margin: 30px;
+    
 }
+.footer-empresas_plataformas a{
+    margin-bottom: 20px;
+    text-decoration: none;
+    color: silver;
+    font-size: 500;
+}
+.footer-empresas_redes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align:center;
+    padding: 5px;
+}
+
 .footer-empresas_redes a {
     align-items: baseline;
     margin: 10px;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+.footer-logo { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .footer-logo img {
-    width: 200px;
-    height: 120px;
+    display: flex;
+    flex-direction: row;
+    width: 140px;
+    height: 80px;
+    align-items: center;
     margin-bottom: 20px;
 }
 .footer-licencias {
@@ -360,6 +423,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 .footer-licencias p {
     display: flex;
@@ -368,5 +432,180 @@
     align-items: center;
     text-align: center;
     font-size: 12px;
-    padding: 30px 30px 0 30px;
+    padding: 0 50px 0 50px; 
+}
+
+/*-------------------------------------------------------------*/
+/*TABLET*/
+@media (min-width: 768px){
+    .header-superior{
+        background-image: url('./image/header.webp');
+        background-size: cover;
+        height: 400px;
+        width: 100%;
+    }
+    .header-superior_enlace{
+        background: rgb(3, 1, 1, 0.7);
+        display: flex;
+        border: 1px solid  white;
+        padding: 10px 20px;
+        border-radius: 5px;
+        color: silver;
+        text-decoration: none;
+        margin-top: 10px;
+        margin-left: 80%;
+        margin-right: 5px;
+        font-size: 14px;
+        justify-content: center;
+    }
+    .header-inferior_descripcion h2{
+        margin-bottom: 10px;
+        font-weight: 400;
+    }
+    .header-inferior_eleccionPlanes_Estandar, .header-inferior_eleccionPlanes_Premium{
+        padding: 10px;
+    }
+    /*VER*/
+    .header-inferior_eleccionPlanes_Estandar, .header-inferior_eleccionPlanes_Premium{
+        align-items: center;
+    }
+    .header-inferior_eleccionPlanes_Estandar  a,
+    .header-inferior_eleccionPlanes_Premium a{
+        width: 250px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /*MAIN*/
+    .main-Seccion_uno-descripcion h4 {
+        font-weight: bold;
+        margin-bottom: 15px;
+        font-size: 18px;
+    }
+    .main-Seccion_uno-descripcion h5 {
+        font-size: 13px;
+        padding: 10px 40px;
+    }
+    .main-Seccion_uno_imagen img{
+        object-fit: fill;
+        height: 300px;
+        width: 80%;
+    }
+    .main-Seccion_cuatro_superior_descripcion h4 {
+        font-size: 30px;
+    }
+    .main-Seccion_cuatro_superior_descripcion h5 {
+        font-size: 14px;
+    }
+
+    .main-Seccion_cuatro_inferior_titulo{
+        margin-top: 150px;
+        font-size: 20px;
+    }
+    .main-Seccion_cuatro_inferior_preguntas-1, .main-Seccion_cuatro_inferior_preguntas-2, .main-Seccion_cuatro_inferior_preguntas-3 {
+        width: 600px;
+    }
+    .footer-informacion {
+        display: flex;
+        flex-direction: row;
+        margin-left: 10px;
+    }
+    .footer-informacion_politicas_acuerdos {
+        padding: 10px;
+    }
+    .footer-informacion_ayuda{
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+    }
+    .footer-informacion_ayuda{
+        border-bottom: none;
+    }
+    .footer-informacion_ayuda-items{
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+    }
+    .footer-informacion_ayuda-items img{
+        display: none;
+    }
+    .footer-empresas{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .footer-empresas_plataformas{
+        display: flex;
+        flex-direction:row;
+        justify-content: space-between;
+        padding: 20px;
+    }
+    .footer-empresas_plataformas a{
+        margin: 10px;
+    }
+    .footer-empresas_redes a img{
+        margin: 10px;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-licencias p {
+        margin: 5px;
+    }
+}
+
+/*DESKTOP*/
+@media (min-width: 1024px){
+    .header-superior{
+        height: 500px;
+    }
+    .header-superior_enlace{
+        background: rgb(3, 1, 1, 0.7);
+        display: flex;
+        border: 1px solid  white;
+        padding: 10px;
+        border-radius: 5px;
+        color: silver;
+        text-decoration: none;
+        margin-top: 10px;
+        margin-right: 20px;
+        font-size: 20px;
+        justify-content: center;
+    }
+    .header-inferior_descripcion h2{
+        font-size: 32px;
+    }
+    .header-inferior_imagen img {
+        height: 130px;
+        width: 200px;
+    }
+    .header-inferior_eleccionPlanes{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px;
+    }
+    .header-inferior_eleccionPlanes_Estandar, .header-inferior_eleccionPlanes_Premium{
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        width: 50%;
+    }
+    .header-inferior_eleccionPlanes_Estandar h4, .header-inferior_eleccionPlanes_Premium h4{
+        width: 60%;
+        margin-top: 20px;
+    }
+    /*MAIN*/
+    .main-Seccion_uno-descripcion{
+        padding: 10px;
+        width: 300px;
+        align-items: start;
+        margin-bottom: 20px;
+    }
+    .main-Seccion_cuatro_superior_descripcion h5{
+        font-size: 18px;
+    }
+    .main-Seccion_cuatro_inferior_preguntas-1, .main-Seccion_cuatro_inferior_preguntas-2, .main-Seccion_cuatro_inferior_preguntas-3 {
+        width: 800px;
+    }
 }
